--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,25 +5,28 @@ services:
       - "8000:8000"
     env_file:
       - .env
+    environment:
+      - PYTHONPATH=/app
     depends_on:
       db:
         condition: service_healthy
     restart: on-failure
     volumes:
-      - ./app:/app
+      - ./app:/app/app
     working_dir: /app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
   db:
     image: postgres:15
+    ports:
+      - "5433:5432"
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 628629
+      POSTGRES_PASSWORD: 123456
       POSTGRES_DB: lu_estilo
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d lu_estilo"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       timeout: 5s
       retries: 5
