--- a/alembic.ini
+++ b/alembic.ini
@@ -1,26 +1,72 @@
+# A generic, single database configuration.
+
 [alembic]
-# Localização da pasta de configuração do Alembic
-script_location = app/alembic
+# path to migration scripts
+script_location = alembic
 
-# Formato dos nomes dos arquivos de migração
-file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
+# template used to generate migration files
+# file_template = %%(rev)s_%%(slug)s
 
-# Adiciona o diretório atual ao sys.path para importar módulos locais
+# sys.path path, will be prepended to sys.path if present.
+# defaults to the current working directory.
 prepend_sys_path = .
 
-# Usa o separador de caminhos do sistema operacional
-version_path_separator = os
+# timezone to use when rendering the date within the migration file
+# as well as the filename.
+# If specified, requires the python-dateutil library that can be
+# installed by adding `alembic[tz]` to the pip requirements
+# string value is passed to dateutil.tz.gettz()
+# leave blank for localtime
+# timezone =
 
-# URL do banco de dados, obtida da variável de ambiente DATABASE_URL
-sqlalchemy.url = %(DATABASE_URL)s
+# max length of characters to apply to the
+# "slug" field
+# truncate_slug_length = 40
+
+# set to 'true' to run the environment during
+# the 'revision' command, regardless of autogenerate
+# revision_environment = false
+
+# set to 'true' to allow .pyc and .pyo files without
+# a source .py file to be detected as revisions in the
+# versions/ directory
+# sourceless = false
+
+# version location specification; This defaults
+# to alembic/versions.  When using multiple version
+# directories, initial revisions must be specified with --version-path.
+# The path separator used here should be the separator specified by "version_path_separator" below.
+# version_locations = %(here)s/bar:%(here)s/bat:alembic/versions
+
+# version path separator; As mentioned above, this is the character used to split
+# version_locations. The default within new alembic.ini files is "os", which uses os.pathsep.
+# If this key is omitted entirely, it falls back to the legacy behavior of splitting on spaces and/or commas.
+# Valid values for version_path_separator are:
+#
+# version_path_separator = :
+# version_path_separator = ;
+# version_path_separator = space
+version_path_separator = os  # Use os.pathsep. Default configuration used for new projects.
+
+# the output encoding used when revision files
+# are written from script.py.mako
+# output_encoding = utf-8
+
+sqlalchemy.url = postgresql://postgres:123456@db:5432/lu_estilo
+
 
 [post_write_hooks]
-# Hook para formatar arquivos de migração com Black
-hooks = black
-black.type = console_scripts
-black.entrypoint = black
-black.options = -l 79 REVISION_SCRIPT_FILENAME
+# post_write_hooks defines scripts or Python functions that are run
+# on newly generated revision scripts.  See the documentation for further
+# detail and examples
 
+# format using "black" - use the console_scripts runner, against the "black" entrypoint
+# hooks = black
+# black.type = console_scripts
+# black.entrypoint = black
+# black.options = -l 79 REVISION_SCRIPT_FILENAME
+
+# Logging configuration
 [loggers]
 keys = root,sqlalchemy,alembic
 
@@ -42,7 +88,7 @@ qualname = sqlalchemy.engine
 
 [logger_alembic]
 level = INFO
-handlers = console
+handlers =
 qualname = alembic
 
 [handler_console]
